--- a/html personal site/contact.html
+++ b/html personal site/contact.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Contact Info</title>
-  </head>
-  <body>
-    <h1>My Contat Details</h1>
-Email :  micsau@hotmail.com <br>
-Phone : 1(604)787-1483 <br>
-Resume (Word) : <a href="Mr.Miché Sauveur_CL&Resume.docx">Here</a>
-<form class="" action="mailto:micsau@hotmail.com" method="post">
-<label>Your Name: </label>
-  <input type="text" name="yourName"><br>
-<label for="contact.htm;">Enter Your Resume</label><br>
-  <input type="file"><br>
-  <input type="submit" name="" id=""><br>
-  <lable>Are you entitled to work in Canada?</lable>
-  <input type="checkbox"><br>
-  <input type="date"> <br>
-  <input type="radio" name="" id=""><br>
-  <input type="range" name="" value="2">how long is your visa?<br>
-  <label for="color">pick your color</label>
-  <input type="color" name="" value=""><br>
-  <lable> please enter your email</lable>
-  <input type="email" name="yourEmail" value=""><br>
-  <label for="">your feedback is appreciated</label><br>
-  <textarea name="YourMessage" rows="8" cols="80">enter your text here </textarea>
-  <input type="submit" name="" value="test" id="">
+
+<head>
+  <meta charset="utf-8">
+  <title>My Contact Info</title>
+</head>
+
+<body>
+  <h1>My Contat Details</h1>
+  Email : micsau@hotmail.com <br>
+  Phone : 1(604)787-1483 <br>
+  Resume (Word) : <a href="Mr.Miché Sauveur_CL&Resume.docx">Here</a>
+  <form action="mailto:micsau@hotmail.com" method="post" enctype="text/plain">
+    <label>Your Name: </label><br>
+    <input type="text" name="yourName"><br>
+    <lable> Please enter your email</lable><br>
+    <input type="email" name="yourEmail" value=""><br>
 
 
+    <label for="">Your feedback is appreciated</label><br>
+    <textarea name="YourMessage" rows="10" cols="30">enter your text here </textarea>
+    <input type="submit" name="" value="send" id="">
 
-</form>
+  </form>
 
-<hr size="3" noshade>
-    <center><a href="index.html"> 🏡home</a></center>
-  </body>
+  <hr size="3" noshade>
+  <center><a href="index.html"> 🏡home</a></center>
+</body>
+
 </html>
