--- a/html personal site/index.html
+++ b/html personal site/index.html
@@ -5,12 +5,15 @@
   <meta charset="utf-8">
   <title>Resume Online</title>
 </head>
+
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="me2.pn" alt="me caught off-gard"> </td>
+      <td> <img src="me2.png" alt="me caught off-gard"> </td>
       <td>
-        <h1>        <center>Gorne Xavier <br>        </h1>
+        <h1>
+          <center>Miché Sauveur<br>
+        </h1>
         <em>I.T. Tech at <strong>CBC Vancouver</strong></em>
       </td>
     </tr>
@@ -18,7 +21,7 @@
 
   <hr size="3" noshade>
 
-  <p>IT support for the past 10 years in various platform such as Windows, Mac and Linux  </p>
+  <p>IT support for the past 10 years in various platform such as Windows, Mac and Linux </p>
   <hr size="3" noshade="0" width="">
   <h2>My Education</h2>
   <ul>
@@ -83,10 +86,10 @@
     <td>⭐⭐⭐⭐</td>
     <tr>
     </tr>
-      <TD>3D graphics</TD>
-      <td>⭐⭐⭐</td>
-      <td>VM Ware Support </td>
-      <td>⭐⭐⭐</td>
+    <TD>3D graphics</TD>
+    <td>⭐⭐⭐</td>
+    <td>VM Ware Support </td>
+    <td>⭐⭐⭐</td>
     <tr>
     </tr>
     <tr>
@@ -95,13 +98,14 @@
       <td>Linux CentOS Support </td>
       <td>⭐⭐⭐</td>
     </tr>
-      <td>Adobe Photoshop </td>
-      <td>⭐⭐⭐</td>
-      <td>Python </td>
-      <td>⭐</td>
+    <td>Adobe Photoshop </td>
+    <td>⭐⭐⭐</td>
+    <td>Python </td>
+    <td>⭐</td>
   </table>
   <hr noshade="3">
   <a href="hobbies.html">My Hobbies</a> <br>
   <a href="contact.html">My Contact Info</a>
 </body>
+
 </html>
