--- a/hobbies.html
+++ b/hobbies.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Hobbies</title>
-  </head>
-  <body>
-    <h2>My Hobbies</h2>
-    <ol start="1">
-      <li>
-        <a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjM7f66xZ3nAhXNl3IEHal_CsUQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.naturalplacesphotography.com%2Fcypress-mountain-ski-day%2F&psig=AOvVaw3D_Kp9G_KDwLYEMmUMUI50&ust=1580000111260339" alt ="Snowboard">Snowboard</a>
-      </li>
-      <li>
-         <a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiPy9fvxZ3nAhU7hXIEHUOVDsEQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.squamishchief.com%2Fcommunity%2Fsquamish-motorcycle-festival-thunders-into-town-1.23891727&psig=AOvVaw3fVqRSTOVcohcy_oIiyQym&ust=1580000247265276"alt="Motorcycle">Motorcycle</a>
-      </li>
-      <li>
-        <a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjI87uyxp3nAhUPknIEHS42BxsQjRx6BAgBEAQ&url=https%3A%2F%2Fbiv.com%2Farticle%2F2015%2F11%2Fbc-video-game-developers-lead-canada-salary-report&psig=AOvVaw30BuckX6wbgXxpKhEZEEhF&ust=1580000352668821" alt="Video Games">Video Games</a>
-      </li>
-      <li>
-        <a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiFuc6Ax53nAhVjmnIEHb8kDD4QjRx6BAgBEAQ&url=https%3A%2F%2Fsuncruisermedia.com%2F4WDrive%2Fclubs%2Fbc-jeep-club-s-apex-adventure%2F&psig=AOvVaw2sAd0dpQQ0qbtJTBO5jMN2&ust=1580000581219645" alt ="4x4">Off-Roading <strong>4x4</strong></a>
-      </li>
-      <center><a href="index.html"> 🏡home</a></center>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>My Hobbies</title>
+</head>
+
+<body>
+  <h2>My Hobbies</h2>
+  <ol start="1">
+    <li>
+      <a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjM7f66xZ3nAhXNl3IEHal_CsUQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.naturalplacesphotography.com%2Fcypress-mountain-ski-day%2F&psig=AOvVaw3D_Kp9G_KDwLYEMmUMUI50&ust=1580000111260339"
+        alt="Snowboard">Snowboard</a>
+    </li>
+    <li>
+      <a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiPy9fvxZ3nAhU7hXIEHUOVDsEQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.squamishchief.com%2Fcommunity%2Fsquamish-motorcycle-festival-thunders-into-town-1.23891727&psig=AOvVaw3fVqRSTOVcohcy_oIiyQym&ust=1580000247265276"
+        alt="Motorcycle">Motorcycle</a>
+    </li>
+    <li>
+      <a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjI87uyxp3nAhUPknIEHS42BxsQjRx6BAgBEAQ&url=https%3A%2F%2Fbiv.com%2Farticle%2F2015%2F11%2Fbc-video-game-developers-lead-canada-salary-report&psig=AOvVaw30BuckX6wbgXxpKhEZEEhF&ust=1580000352668821"
+        alt="Video Games">Video Games</a>
+    </li>
+    <li>
+      <a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiFuc6Ax53nAhVjmnIEHb8kDD4QjRx6BAgBEAQ&url=https%3A%2F%2Fsuncruisermedia.com%2F4WDrive%2Fclubs%2Fbc-jeep-club-s-apex-adventure%2F&psig=AOvVaw2sAd0dpQQ0qbtJTBO5jMN2&ust=1580000581219645"
+        alt="4x4">Off-Roading <strong>4x4</strong></a>
+    </li>
+    <center><a href="index.html"> 🏡home</a></center>
+</body>
+
 </html>
