--- a/html personal site/index.html
+++ b/html personal site/index.html
@@ -3,35 +3,41 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Resume Online</title>
+  <title>Online Resume</title>
+
+  <link rel="stylesheet" href="css/Style.css">
+
+  <style media="screen">
+
+  
+    }
+  </style>
 </head>
 
-<body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="me2.png" alt="me caught off-gard"> </td>
+      <td> <img src="me2.png" alt="caught me off-gard"> </td>
       <td>
         <h1>
           <center>Miché Sauveur<br>
         </h1>
-        <em>I.T. Tech at <strong>CBC Vancouver</strong></em>
+        Tech at <strong>CBC Vancouver</strong>
       </td>
     </tr>
   </table>
 
-  <hr size="3" noshade>
+  <hr size="3" >
 
   <p>IT support for the past 10 years in various platform such as Windows, Mac and Linux </p>
-  <hr size="3" noshade="0" width="">
-  <h2>My Education</h2>
+  <hr size="3" >
+  <h3>My Education</h3>
   <ul>
     <li>
       <strong><a href="https://www.udemy.com/courses/development/web-development/?search-query=web+development">Udemy Web Develepoment Bootcamp</a></strong> </li>
     <li>Linux Ubuntu from Udemy</li>
   </ul>
-  <hr>
+  <hr size="3" >
   <h3>Work Experience</h3>
-  <!--  <p>2018- CBC tech Services</p> -->
 
   <table border="1" cellspacing="1">
 
@@ -43,17 +49,17 @@
       </tr>
       <tr>
         <td>2018-</td>
-        <td>CBC tech Services</td>
+        <td>Tech Services</td>
         <td>CBC</td>
       </tr>
       <tr>
         <td>2016-2018</td>
-        <td>Linux tech.</td>
+        <td>Linux Tech.</td>
         <td>Digital Domain</td>
       </tr>
       <tr>
         <td>2015-2016</td>
-        <td>EA Sport IT support Lvel 2</td>
+        <td> IT support Level 2</td>
         <td>EA Sports</td>
       </tr>
       <tr>
@@ -65,7 +71,7 @@
     </thead>
 
   </table>
-  <hr>
+  <hr size="3" >
   <h3>Skills</h3>
   <table border="1" cellspacing="1">
     <tr>
@@ -81,7 +87,7 @@
     <tr>
     </tr>
     <td>HTML</td>
-    <TD>⭐</TD>
+    <TD>⭐⭐</TD>
     <td>VSphere Suport </td>
     <td>⭐⭐⭐⭐</td>
     <tr>
@@ -101,9 +107,9 @@
     <td>Adobe Photoshop </td>
     <td>⭐⭐⭐</td>
     <td>Python </td>
-    <td>⭐</td>
+    <td>⭐⭐</td>
   </table>
-  <hr noshade="3">
+  <hr >
   <a href="hobbies.html">My Hobbies</a> <br>
   <a href="contact.html">My Contact Info</a>
 </body>
