--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>My Contact Info</title>
+  <link rel="stylesheet" href="css/Style.css">
 </head>
 
-<body>
+<body >
   <h1>My Contat Details</h1>
   Email : micsau@hotmail.com <br>
   Phone : 1(604)787-1483 <br>
@@ -24,7 +25,7 @@
 
   </form>
 
-  <hr size="3" noshade>
+  <hr size="3">
   <center><a href="index.html"> 🏡home</a></center>
 </body>
 
