--- a/hobbies.html
+++ b/hobbies.html
@@ -4,11 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
+  <link rel="stylesheet" href="css/Style.css">
 </head>
 
 <body>
-  <h2>My Hobbies</h2>
+  <h1>My Hobbies</h1>
+
   <ol start="1">
+    <hr>
     <li>
       <a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjM7f66xZ3nAhXNl3IEHal_CsUQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.naturalplacesphotography.com%2Fcypress-mountain-ski-day%2F&psig=AOvVaw3D_Kp9G_KDwLYEMmUMUI50&ust=1580000111260339"
         alt="Snowboard">Snowboard</a>
@@ -25,6 +28,7 @@
       <a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiFuc6Ax53nAhVjmnIEHb8kDD4QjRx6BAgBEAQ&url=https%3A%2F%2Fsuncruisermedia.com%2F4WDrive%2Fclubs%2Fbc-jeep-club-s-apex-adventure%2F&psig=AOvVaw2sAd0dpQQ0qbtJTBO5jMN2&ust=1580000581219645"
         alt="4x4">Off-Roading <strong>4x4</strong></a>
     </li>
+    <hr>
     <center><a href="index.html"> 🏡home</a></center>
 </body>
 
