--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Online Resume</title>
 
-  <link rel="stylesheet" href="css/Style.css">
+  <link rel="stylesheet" href="/css/Style.css">
 
   <style media="screen">
 
